--- a/style.css
+++ b/style.css
@@ -143,9 +143,18 @@ header{
 
 /* ----- application page css --------*/
 
-.small-banner img{
-  width: 100vw;
+.sub-header{
+  height: 50vh;
+  width: 100%;
+  background: linear-gradient(rgba(4,30,9,0.7),rgba(4,30,9,0.7)),url(bg2.jpg);
+background-position: center;
+background-size: cover;
+text-align: center;
+color: #fff;
 }
+.sub-header h1{
+  margin-top: 100px;
+  }
 
 .apply{
   background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.7)),url(images/background2.jpg);
